syntax = "proto3";

package bdio.v1;

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "com.blackducksoftware.bdio.proto.v1";


enum MatchType {
  SOME_MATCH_TYPE = 0;
}


message ProtoDependencyNode {
  int64 depends_on = 1;

  int64 evidence = 2;

  string container_layer = 3;

  string whiteout_layer = 4;

  string description = 5;

  MatchType matchType = 6;
}

message ProtoComponentNode {
  int64 id = 1;

  string namespace = 2;

  string identifier = 3;

  string description = 4;
}

message ProtoImageNode {
  string id = 1;

  string image_id = 2;

  string architecture = 3;

  repeated string repo_tag = 4;

  string os = 5;

  google.protobuf.Timestamp created_at = 6;

  string config = 7;

  repeated string layer = 8;
}

message ProtoImageLayerNode {
  string id = 1;

  string layer_id = 2;

  int64 size = 3;

  string command = 4;

  google.protobuf.Timestamp created_at = 5;

  string comment = 6;
}

message ProtoAnnotationNode {
  string id = 1;

  string comment = 2;
}
